package observer;

import java.util.ArrayList;
import java.util.List;

interface Observer {
    void update();
}
